--- a/config/config.ini
+++ b/config/config.ini
@@ -1,7 +1,7 @@
 LOGIN = leskovskaya_test
 PASSWORD = test123
 MAIL_ADDRESS = leskovskaya_test@mail.ru
-ADDRESSEE_MAIL_FIELD = leskovskaya1.17@gmail.com
+ADDRESSEE_MAIL_FIELD = leskovskij@gmail.com
 SUBJECT_FIELD = Reminder
 TEXT_FIELD = Call to Kate
 CHROME_DRIVER = webdriver.chrome.driver
